--- a/lib/sinatra/videoman/views/show.erb
+++ b/lib/sinatra/videoman/views/show.erb
@@ -1,5 +1,5 @@
 
 <video width="320" height="240" controls>
-  <source src=<%= @video.video.url %> type=<%= "@video/{video.video.extname.delete!('.')}" %>
+  <source src=<%= @video.video.url %> type="video/webm" />
     Your browser does not support the video tag.
 </video>
