--- a/lib/sinatra/videoman/views/upload.erb
+++ b/lib/sinatra/videoman/views/upload.erb
@@ -3,23 +3,34 @@
     // Container <div> where dynamic content will be placed
     var container = document.getElementById("video_input_fields");
     // Append a node with a random text
-    container.appendChild(document.createTextNode("Video:"));
+    container.appendChild(document.createTextNode("Video: "));
     // Create an <input> element, set its type and name attributes
     var input = document.createElement("input");
     input.type = "file";
     input.name = "video_files[]";
     container.appendChild(input);
+    // Append a line break
+    container.appendChild(document.createElement("br"));
   }
 </script>
 <%= flash[:error] %>
 <%= flash[:notice] %>
 <form id="video_form" enctype="multipart/form-data" method="post" action="/videos/upload">
-  <div id="video_input_fields">
-    <input type="file" name="video_files[]" /><br />
-  </div>
-  <p>Title: <input type="text" name="video[title]" /></p>
-  <p>Description: <input type="text" name="video[description]" /></p>
-  <p>Thumbnail: <input type="file" name="video[thumbnail]" /></p>
+  <fieldset id="video_input_fields">
+    <legend>Video files</legend>
+    <label for="file">Video:</label>
+    <input id="file" type="file" name="video_files[]" required /></br>
+  </fieldset>
+
+  <label for="title">Title:</label>
+  <input id="title" type="text" name="video[title]" placeholder="Video title" required /><br />
+
+  <label for="description">Description:</label>
+  <input id="description" type="text" name="video[description]" placeholder="Video description" required /><br />
+
+  <label for="thumbnail">Thumbnail:</label>
+  <input id="thumbnail" type="file" name="video[thumbnail]" required /><br />
+
   <input type="submit" value="Upload" />
   <input type="button" value="Add file" onclick="addFields()" />
 </form>
