--- a/lib/sinatra/videoman/views/show.erb
+++ b/lib/sinatra/videoman/views/show.erb
@@ -1,5 +1,1 @@
-
-<video width="320" height="240" controls>
-  <source src=<%= @video.video.url %> type="video/webm" />
-    Your browser does not support the video tag.
-</video>
+<%= partial :video, :video => @video %>
