--- a/lib/sinatra/videoman/views/list.erb
+++ b/lib/sinatra/videoman/views/list.erb
@@ -1,1 +1,1 @@
-<%= partial 'videos/viodeo_link'.to_sym, :collection => @video_links%>
+<%= partial 'videos/video_link'.to_sym, :collection => @video_links%>
