Adding I18n for localization support. Also removed configs for displaying messages since I18n is going to handle them frm now on. Also removed after_video_edit_failure_path config.

--- a/lib/sinatra/videoman/views/video.erb
+++ b/lib/sinatra/videoman/views/video.erb
@@ -3,7 +3,7 @@
   <% video.video_files.each do |source| %>
     <source src=<%= source.file.url %> type=<%= source.content_type %> />
   <% end %>
-    Your browser does not support the video tag.
+    <%= I18n.t 'video_tag_not_supported' %>
 </video>
 <div id="description">
   <%= video.description %>
